@@ -2013,7 +2013,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
@@ -2033,7 +2033,7 @@
       <component name="libgnomecanvas" dir="libgnomecanvas" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomecanvas-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
@@ -2126,7 +2126,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
@@ -2146,7 +2146,7 @@
       <component name="libgtop" dir="libgtop" group="desktop">
         <podir dir="po"/>
         <potname name="libgtop-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
