@@ -1,3 +1,8 @@
+2004-11-10  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: libgnome, libgnomecanvas,
+	libgnomeui, and libgtop have all been branched.
+
 2004-11-09  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-menus to extras,
